dark mode fixes

--- a/src/Editor/darkmode.css
+++ b/src/Editor/darkmode.css
@@ -42,7 +42,11 @@
   fill: #f5f8fa !important;
 }
 
+.bp3-dark .menu-bar {
+  background: none !important;
+}
 .bp3-dark .alignmentViewTrackContainer text,
+.bp3-dark .ve-monospace-font text,
 .bp3-dark .veRowViewAxis text,
 .bp3-dark .translationLayer text {
   stroke: #f5f8fa !important;
